bin/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AUTO
    CONST
    ENUM
    EXTERN
    GOTO
    REGISTER
    SHORT
    SIGNED
    STATIC
    TYPEDEF
    UNION
    UNSIGNED
    VOLATILE

Grammar

Rule 0     S' -> program
Rule 1     program -> translation_unit
Rule 2     translation_unit -> external_declaration
Rule 3     translation_unit -> translation_unit external_declaration
Rule 4     external_declaration -> function_definition
Rule 5     external_declaration -> declaration
Rule 6     function_definition -> type_specifier declarator func_scope parameter_type_list func_rparen_1 function_body pop_sym
Rule 7     function_definition -> type_specifier declarator func_scope func_rparen_2 function_body pop_sym
Rule 8     function_definition -> type_specifier declarator func_scope parameter_type_list R_PAREN SEMI_COLON pop_sym
Rule 9     function_definition -> type_specifier declarator func_scope R_PAREN SEMI_COLON pop_sym
Rule 10    func_scope -> L_PAREN
Rule 11    func_rparen_1 -> R_PAREN
Rule 12    func_rparen_2 -> R_PAREN
Rule 13    primary_expression -> IDENTIFIER
Rule 14    primary_expression -> INT_CONSTANT
Rule 15    primary_expression -> HEX_CONSTANT
Rule 16    primary_expression -> OCTAL_CONSTANT
Rule 17    primary_expression -> EXPONENT_CONSTANT
Rule 18    primary_expression -> REAL_CONSTANT
Rule 19    primary_expression -> CHAR_CONSTANT
Rule 20    primary_expression -> STR_CONSTANT
Rule 21    primary_expression -> L_PAREN expression R_PAREN
Rule 22    primary_expression -> TRUE
Rule 23    primary_expression -> FALSE
Rule 24    primary_expression -> NULL
Rule 25    postfix_expression -> primary_expression
Rule 26    postfix_expression -> postfix_expression INCREMENT
Rule 27    postfix_expression -> postfix_expression DECREMENT
Rule 28    postfix_expression -> postfix_expression L_SQBR expression R_SQBR
Rule 29    postfix_expression -> postfix_expression L_PAREN R_PAREN
Rule 30    postfix_expression -> postfix_expression L_PAREN argument_expression_list R_PAREN
Rule 31    postfix_expression -> postfix_expression DOT IDENTIFIER
Rule 32    postfix_expression -> postfix_expression ARROW IDENTIFIER
Rule 33    argument_expression_list -> assignment_expression
Rule 34    argument_expression_list -> argument_expression_list COMMA assignment_expression
Rule 35    unary_expression -> postfix_expression
Rule 36    unary_expression -> INCREMENT unary_expression
Rule 37    unary_expression -> DECREMENT unary_expression
Rule 38    unary_expression -> unary_operator cast_expression
Rule 39    unary_expression -> SIZEOF unary_expression
Rule 40    unary_expression -> SIZEOF L_PAREN type_name R_PAREN
Rule 41    unary_operator -> BITWISE_AND
Rule 42    unary_operator -> MULTIPLY
Rule 43    unary_operator -> ADD
Rule 44    unary_operator -> SUBSTRACT
Rule 45    unary_operator -> BITWISE_ONE_COMPLEMENT
Rule 46    unary_operator -> LOGICAL_NOT
Rule 47    cast_expression -> unary_expression
Rule 48    cast_expression -> L_PAREN type_name R_PAREN cast_expression
Rule 49    multiplicative_expression -> cast_expression
Rule 50    multiplicative_expression -> multiplicative_expression MULTIPLY cast_expression
Rule 51    multiplicative_expression -> multiplicative_expression DIVIDE cast_expression
Rule 52    multiplicative_expression -> multiplicative_expression MODULUS cast_expression
Rule 53    additive_expression -> multiplicative_expression
Rule 54    additive_expression -> additive_expression ADD multiplicative_expression
Rule 55    additive_expression -> additive_expression SUBSTRACT multiplicative_expression
Rule 56    shift_expression -> additive_expression
Rule 57    shift_expression -> shift_expression LEFT_SHIFT additive_expression
Rule 58    shift_expression -> shift_expression RIGHT_SHIFT additive_expression
Rule 59    relational_expression -> shift_expression
Rule 60    relational_expression -> relational_expression LESS shift_expression
Rule 61    relational_expression -> relational_expression GREATER shift_expression
Rule 62    relational_expression -> relational_expression LESS_EQUALS shift_expression
Rule 63    relational_expression -> relational_expression GREATER_EQUALS shift_expression
Rule 64    equality_expression -> relational_expression
Rule 65    equality_expression -> equality_expression EQUALS relational_expression
Rule 66    equality_expression -> equality_expression NOT_EQUALS relational_expression
Rule 67    and_expression -> equality_expression
Rule 68    and_expression -> and_expression BITWISE_AND equality_expression
Rule 69    exclusive_or_expression -> and_expression
Rule 70    exclusive_or_expression -> exclusive_or_expression BITWISE_XOR and_expression
Rule 71    inclusive_or_expression -> exclusive_or_expression
Rule 72    inclusive_or_expression -> inclusive_or_expression BITWISE_OR exclusive_or_expression
Rule 73    logical_and_expression -> inclusive_or_expression
Rule 74    logical_and_expression -> logical_and_expression LOGICAL_AND inclusive_or_expression
Rule 75    logical_or_expression -> logical_and_expression
Rule 76    logical_or_expression -> logical_or_expression LOGICAL_OR logical_and_expression
Rule 77    conditional_expression -> logical_or_expression
Rule 78    conditional_expression -> logical_or_expression QUES_MARK expression COLON conditional_expression
Rule 79    assignment_expression -> conditional_expression
Rule 80    assignment_expression -> unary_expression assignment_operator assignment_expression
Rule 81    assignment_operator -> ASSIGNMENT
Rule 82    assignment_operator -> MULTIPLY_ASSIGNMENT
Rule 83    assignment_operator -> DIVIDE_ASSIGNMENT
Rule 84    assignment_operator -> MODULUS_ASSIGNMENT
Rule 85    assignment_operator -> ADD_ASSIGNMENT
Rule 86    assignment_operator -> SUBSTRACT_ASSIGNMENT
Rule 87    assignment_operator -> LEFT_SHIFT_ASSIGNMENT
Rule 88    assignment_operator -> RIGHT_SHIFT_ASSIGNMENT
Rule 89    assignment_operator -> BITWISE_AND_ASSIGNMENT
Rule 90    assignment_operator -> BITWISE_XOR_ASSIGNMENT
Rule 91    assignment_operator -> BITWISE_OR_ASSIGNMENT
Rule 92    expression -> assignment_expression
Rule 93    expression -> expression COMMA assignment_expression
Rule 94    constant_expression -> conditional_expression
Rule 95    declaration -> struct_specifier SEMI_COLON
Rule 96    declaration -> type_specifier init_declarator_list SEMI_COLON
Rule 97    init_declarator_list -> init_declarator
Rule 98    init_declarator_list -> init_declarator_list COMMA init_declarator
Rule 99    init_declarator -> declarator
Rule 100   init_declarator -> declarator ASSIGNMENT initializer
Rule 101   type_specifier -> VOID
Rule 102   type_specifier -> CHAR
Rule 103   type_specifier -> INT
Rule 104   type_specifier -> LONG
Rule 105   type_specifier -> FLOAT
Rule 106   type_specifier -> DOUBLE
Rule 107   type_specifier -> STRUCT IDENTIFIER
Rule 108   type_specifier -> BOOL
Rule 109   struct_specifier -> STRUCT IDENTIFIER add_sym_struct struct_declaration_list pop_sym R_BRACES
Rule 110   add_sym_struct -> L_BRACES
Rule 111   struct_declaration_list -> struct_declaration
Rule 112   struct_declaration_list -> struct_declaration_list struct_declaration
Rule 113   struct_declaration -> type_specifier struct_declarator_list SEMI_COLON
Rule 114   struct_declarator_list -> declarator
Rule 115   struct_declarator_list -> struct_declarator_list COMMA declarator
Rule 116   declarator -> pointer direct_declarator
Rule 117   declarator -> no_pointer direct_declarator
Rule 118   direct_declarator -> IDENTIFIER
Rule 119   direct_declarator -> L_PAREN declarator R_PAREN
Rule 120   direct_declarator -> direct_declarator L_SQBR INT_CONSTANT R_SQBR
Rule 121   pointer -> MULTIPLY
Rule 122   pointer -> pointer MULTIPLY
Rule 123   no_pointer -> <empty>
Rule 124   parameter_type_list -> parameter_declaration
Rule 125   parameter_type_list -> parameter_type_list COMMA parameter_declaration
Rule 126   parameter_declaration -> type_specifier declarator
Rule 127   type_name -> type_specifier
Rule 128   type_name -> type_specifier pointer
Rule 129   initializer -> assignment_expression
Rule 130   initializer -> L_BRACES initializer_list R_BRACES
Rule 131   initializer -> L_BRACES initializer_list COMMA R_BRACES
Rule 132   initializer_list -> initializer
Rule 133   initializer_list -> initializer_list COMMA initializer
Rule 134   statement -> compound_statement
Rule 135   statement -> expression_statement
Rule 136   statement -> selection_statement
Rule 137   statement -> iteration_statement
Rule 138   statement -> jump_statement
Rule 139   labeled_statement_list -> labeled_statement_list labeled_statement
Rule 140   labeled_statement_list -> labeled_statement
Rule 141   labeled_statement -> CASE constant_expression COLON statement
Rule 142   labeled_statement -> DEFAULT COLON statement
Rule 143   compound_statement -> L_BRACES R_BRACES
Rule 144   compound_statement -> L_BRACES add_sym block_item_list pop_sym R_BRACES
Rule 145   function_body -> L_BRACES R_BRACES
Rule 146   function_body -> L_BRACES block_item_list R_BRACES
Rule 147   block_item_list -> block_item
Rule 148   block_item_list -> block_item_list block_item
Rule 149   block_item -> statement
Rule 150   block_item -> declaration
Rule 151   expression_statement -> SEMI_COLON
Rule 152   expression_statement -> expression SEMI_COLON
Rule 153   selection_statement -> IF L_PAREN expression R_PAREN statement
Rule 154   selection_statement -> IF L_PAREN expression R_PAREN statement ELSE statement
Rule 155   selection_statement -> SWITCH L_PAREN expression R_PAREN L_BRACES add_sym labeled_statement_list pop_sym R_BRACES
Rule 156   iteration_statement -> WHILE L_PAREN expression R_PAREN statement
Rule 157   iteration_statement -> DO statement WHILE L_PAREN expression R_PAREN SEMI_COLON
Rule 158   iteration_statement -> FOR L_PAREN expression_statement expression_statement R_PAREN statement
Rule 159   iteration_statement -> FOR L_PAREN expression_statement expression_statement expression R_PAREN statement
Rule 160   jump_statement -> CONTINUE SEMI_COLON
Rule 161   jump_statement -> BREAK SEMI_COLON
Rule 162   jump_statement -> RETURN SEMI_COLON
Rule 163   jump_statement -> RETURN expression SEMI_COLON
Rule 164   add_sym -> <empty>
Rule 165   pop_sym -> <empty>

Terminals, with rules where they appear

ADD                  : 43 54
ADD_ASSIGNMENT       : 85
ARROW                : 32
ASSIGNMENT           : 81 100
AUTO                 : 
BITWISE_AND          : 41 68
BITWISE_AND_ASSIGNMENT : 89
BITWISE_ONE_COMPLEMENT : 45
BITWISE_OR           : 72
BITWISE_OR_ASSIGNMENT : 91
BITWISE_XOR          : 70
BITWISE_XOR_ASSIGNMENT : 90
BOOL                 : 108
BREAK                : 161
CASE                 : 141
CHAR                 : 102
CHAR_CONSTANT        : 19
COLON                : 78 141 142
COMMA                : 34 93 98 115 125 131 133
CONST                : 
CONTINUE             : 160
DECREMENT            : 27 37
DEFAULT              : 142
DIVIDE               : 51
DIVIDE_ASSIGNMENT    : 83
DO                   : 157
DOT                  : 31
DOUBLE               : 106
ELSE                 : 154
ENUM                 : 
EQUALS               : 65
EXPONENT_CONSTANT    : 17
EXTERN               : 
FALSE                : 23
FLOAT                : 105
FOR                  : 158 159
GOTO                 : 
GREATER              : 61
GREATER_EQUALS       : 63
HEX_CONSTANT         : 15
IDENTIFIER           : 13 31 32 107 109 118
IF                   : 153 154
INCREMENT            : 26 36
INT                  : 103
INT_CONSTANT         : 14 120
LEFT_SHIFT           : 57
LEFT_SHIFT_ASSIGNMENT : 87
LESS                 : 60
LESS_EQUALS          : 62
LOGICAL_AND          : 74
LOGICAL_NOT          : 46
LOGICAL_OR           : 76
LONG                 : 104
L_BRACES             : 110 130 131 143 144 145 146 155
L_PAREN              : 10 21 29 30 40 48 119 153 154 155 156 157 158 159
L_SQBR               : 28 120
MODULUS              : 52
MODULUS_ASSIGNMENT   : 84
MULTIPLY             : 42 50 121 122
MULTIPLY_ASSIGNMENT  : 82
NOT_EQUALS           : 66
NULL                 : 24
OCTAL_CONSTANT       : 16
QUES_MARK            : 78
REAL_CONSTANT        : 18
REGISTER             : 
RETURN               : 162 163
RIGHT_SHIFT          : 58
RIGHT_SHIFT_ASSIGNMENT : 88
R_BRACES             : 109 130 131 143 144 145 146 155
R_PAREN              : 8 9 11 12 21 29 30 40 48 119 153 154 155 156 157 158 159
R_SQBR               : 28 120
SEMI_COLON           : 8 9 95 96 113 151 152 157 160 161 162 163
SHORT                : 
SIGNED               : 
SIZEOF               : 39 40
STATIC               : 
STRUCT               : 107 109
STR_CONSTANT         : 20
SUBSTRACT            : 44 55
SUBSTRACT_ASSIGNMENT : 86
SWITCH               : 155
TRUE                 : 22
TYPEDEF              : 
UNION                : 
UNSIGNED             : 
VOID                 : 101
VOLATILE             : 
WHILE                : 156 157
error                : 

Nonterminals, with rules where they appear

add_sym              : 144 155
add_sym_struct       : 109
additive_expression  : 54 55 56 57 58
and_expression       : 68 69 70
argument_expression_list : 30 34
assignment_expression : 33 34 80 92 93 129
assignment_operator  : 80
block_item           : 147 148
block_item_list      : 144 146 148
cast_expression      : 38 48 49 50 51 52
compound_statement   : 134
conditional_expression : 78 79 94
constant_expression  : 141
declaration          : 5 150
declarator           : 6 7 8 9 99 100 114 115 119 126
direct_declarator    : 116 117 120
equality_expression  : 65 66 67 68
exclusive_or_expression : 70 71 72
expression           : 21 28 78 93 152 153 154 155 156 157 159 163
expression_statement : 135 158 158 159 159
external_declaration : 2 3
func_rparen_1        : 6
func_rparen_2        : 7
func_scope           : 6 7 8 9
function_body        : 6 7
function_definition  : 4
inclusive_or_expression : 72 73 74
init_declarator      : 97 98
init_declarator_list : 96 98
initializer          : 100 132 133
initializer_list     : 130 131 133
iteration_statement  : 137
jump_statement       : 138
labeled_statement    : 139 140
labeled_statement_list : 139 155
logical_and_expression : 74 75 76
logical_or_expression : 76 77 78
multiplicative_expression : 50 51 52 53 54 55
no_pointer           : 117
parameter_declaration : 124 125
parameter_type_list  : 6 8 125
pointer              : 116 122 128
pop_sym              : 6 7 8 9 109 144 155
postfix_expression   : 26 27 28 29 30 31 32 35
primary_expression   : 25
program              : 0
relational_expression : 60 61 62 63 64 65 66
selection_statement  : 136
shift_expression     : 57 58 59 60 61 62 63
statement            : 141 142 149 153 154 154 156 157 158 159
struct_declaration   : 111 112
struct_declaration_list : 109 112
struct_declarator_list : 113 115
struct_specifier     : 95
translation_unit     : 1 3
type_name            : 40 48
type_specifier       : 6 7 8 9 96 113 126 127 128
unary_expression     : 36 37 39 47 80
unary_operator       : 38

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . translation_unit
    (2) translation_unit -> . external_declaration
    (3) translation_unit -> . translation_unit external_declaration
    (4) external_declaration -> . function_definition
    (5) external_declaration -> . declaration
    (6) function_definition -> . type_specifier declarator func_scope parameter_type_list func_rparen_1 function_body pop_sym
    (7) function_definition -> . type_specifier declarator func_scope func_rparen_2 function_body pop_sym
    (8) function_definition -> . type_specifier declarator func_scope parameter_type_list R_PAREN SEMI_COLON pop_sym
    (9) function_definition -> . type_specifier declarator func_scope R_PAREN SEMI_COLON pop_sym
    (95) declaration -> . struct_specifier SEMI_COLON
    (96) declaration -> . type_specifier init_declarator_list SEMI_COLON
    (101) type_specifier -> . VOID
    (102) type_specifier -> . CHAR
    (103) type_specifier -> . INT
    (104) type_specifier -> . LONG
    (105) type_specifier -> . FLOAT
    (106) type_specifier -> . DOUBLE
    (107) type_specifier -> . STRUCT IDENTIFIER
    (108) type_specifier -> . BOOL
    (109) struct_specifier -> . STRUCT IDENTIFIER add_sym_struct struct_declaration_list pop_sym R_BRACES

    VOID            shift and go to state 8
    CHAR            shift and go to state 9
    INT             shift and go to state 10
    LONG            shift and go to state 11
    FLOAT           shift and go to state 12
    DOUBLE          shift and go to state 13
    STRUCT          shift and go to state 14
    BOOL            shift and go to state 15

    program                        shift and go to state 1
    translation_unit               shift and go to state 2
    external_declaration           shift and go to state 3
    function_definition            shift and go to state 4
    declaration                    shift and go to state 5
    type_specifier                 shift and go to state 6
    struct_specifier               shift and go to state 7

state 1

    (0) S' -> program .



state 2

    (1) program -> translation_unit .
    (3) translation_unit -> translation_unit . external_declaration
    (4) external_declaration -> . function_definition
    (5) external_declaration -> . declaration
    (6) function_definition -> . type_specifier declarator func_scope parameter_type_list func_rparen_1 function_body pop_sym
    (7) function_definition -> . type_specifier declarator func_scope func_rparen_2 function_body pop_sym
    (8) function_definition -> . type_specifier declarator func_scope parameter_type_list R_PAREN SEMI_COLON pop_sym
    (9) function_definition -> . type_specifier declarator func_scope R_PAREN SEMI_COLON pop_sym
    (95) declaration -> . struct_specifier SEMI_COLON
    (96) declaration -> . type_specifier init_declarator_list SEMI_COLON
    (101) type_specifier -> . VOID
    (102) type_specifier -> . CHAR
    (103) type_specifier -> . INT
    (104) type_specifier -> . LONG
    (105) type_specifier -> . FLOAT
    (106) type_specifier -> . DOUBLE
    (107) type_specifier -> . STRUCT IDENTIFIER
    (108) type_specifier -> . BOOL
    (109) struct_specifier -> . STRUCT IDENTIFIER add_sym_struct struct_declaration_list pop_sym R_BRACES

    $end            reduce using rule 1 (program -> translation_unit .)
    VOID            shift and go to state 8
    CHAR            shift and go to state 9
    INT             shift and go to state 10
    LONG            shift and go to state 11
    FLOAT           shift and go to state 12
    DOUBLE          shift and go to state 13
    STRUCT          shift and go to state 14
    BOOL            shift and go to state 15

    external_declaration           shift and go to state 16
    function_definition            shift and go to state 4
    declaration                    shift and go to state 5
    type_specifier                 shift and go to state 6
    struct_specifier               shift and go to state 7

state 3

    (2) translation_unit -> external_declaration .

    VOID            reduce using rule 2 (translation_unit -> external_declaration .)
    CHAR            reduce using rule 2 (translation_unit -> external_declaration .)
    INT             reduce using rule 2 (translation_unit -> external_declaration .)
    LONG            reduce using rule 2 (translation_unit -> external_declaration .)
    FLOAT           reduce using rule 2 (translation_unit -> external_declaration .)
    DOUBLE          reduce using rule 2 (translation_unit -> external_declaration .)
    STRUCT          reduce using rule 2 (translation_unit -> external_declaration .)
    BOOL            reduce using rule 2 (translation_unit -> external_declaration .)
    $end            reduce using rule 2 (translation_unit -> external_declaration .)


state 4

    (4) external_declaration -> function_definition .

    VOID            reduce using rule 4 (external_declaration -> function_definition .)
    CHAR            reduce using rule 4 (external_declaration -> function_definition .)
    INT             reduce using rule 4 (external_declaration -> function_definition .)
    LONG            reduce using rule 4 (external_declaration -> function_definition .)
    FLOAT           reduce using rule 4 (external_declaration -> function_definition .)
    DOUBLE          reduce using rule 4 (external_declaration -> function_definition .)
    STRUCT          reduce using rule 4 (external_declaration -> function_definition .)
    BOOL            reduce using rule 4 (external_declaration -> function_definition .)
    $end            reduce using rule 4 (external_declaration -> function_definition .)


state 5

    (5) external_declaration -> declaration .

    VOID            reduce using rule 5 (external_declaration -> declaration .)
    CHAR            reduce using rule 5 (external_declaration -> declaration .)
    INT             reduce using rule 5 (external_declaration -> declaration .)
    LONG            reduce using rule 5 (external_declaration -> declaration .)
    FLOAT           reduce using rule 5 (external_declaration -> declaration .)
    DOUBLE          reduce using rule 5 (external_declaration -> declaration .)
    STRUCT          reduce using rule 5 (external_declaration -> declaration .)
    BOOL            reduce using rule 5 (external_declaration -> declaration .)
    $end            reduce using rule 5 (external_declaration -> declaration .)


state 6

    (6) function_definition -> type_specifier . declarator func_scope parameter_type_list func_rparen_1 function_body pop_sym
    (7) function_definition -> type_specifier . declarator func_scope func_rparen_2 function_body pop_sym
    (8) function_definition -> type_specifier . declarator func_scope parameter_type_list R_PAREN SEMI_COLON pop_sym
    (9) function_definition -> type_specifier . declarator func_scope R_PAREN SEMI_COLON pop_sym
    (96) declaration -> type_specifier . init_declarator_list SEMI_COLON
    (116) declarator -> . pointer direct_declarator
    (117) declarator -> . no_pointer direct_declarator
    (97) init_declarator_list -> . init_declarator
    (98) init_declarator_list -> . init_declarator_list COMMA init_declarator
    (121) pointer -> . MULTIPLY
    (122) pointer -> . pointer MULTIPLY
    (123) no_pointer -> .
    (99) init_declarator -> . declarator
    (100) init_declarator -> . declarator ASSIGNMENT initializer

    MULTIPLY        shift and go to state 22
    IDENTIFIER      reduce using rule 123 (no_pointer -> .)
    L_PAREN         reduce using rule 123 (no_pointer -> .)

    declarator                     shift and go to state 17
    init_declarator_list           shift and go to state 18
    pointer                        shift and go to state 19
    no_pointer                     shift and go to state 20
    init_declarator                shift and go to state 21

state 7

    (95) declaration -> struct_specifier . SEMI_COLON

    SEMI_COLON      shift and go to state 23


state 8

    (101) type_specifier -> VOID .

    MULTIPLY        reduce using rule 101 (type_specifier -> VOID .)
    IDENTIFIER      reduce using rule 101 (type_specifier -> VOID .)
    L_PAREN         reduce using rule 101 (type_specifier -> VOID .)
    R_PAREN         reduce using rule 101 (type_specifier -> VOID .)


state 9

    (102) type_specifier -> CHAR .

    MULTIPLY        reduce using rule 102 (type_specifier -> CHAR .)
    IDENTIFIER      reduce using rule 102 (type_specifier -> CHAR .)
    L_PAREN         reduce using rule 102 (type_specifier -> CHAR .)
    R_PAREN         reduce using rule 102 (type_specifier -> CHAR .)


state 10

    (103) type_specifier -> INT .

    MULTIPLY        reduce using rule 103 (type_specifier -> INT .)
    IDENTIFIER      reduce using rule 103 (type_specifier -> INT .)
    L_PAREN         reduce using rule 103 (type_specifier -> INT .)
    R_PAREN         reduce using rule 103 (type_specifier -> INT .)


state 11

    (104) type_specifier -> LONG .

    MULTIPLY        reduce using rule 104 (type_specifier -> LONG .)
    IDENTIFIER      reduce using rule 104 (type_specifier -> LONG .)
    L_PAREN         reduce using rule 104 (type_specifier -> LONG .)
    R_PAREN         reduce using rule 104 (type_specifier -> LONG .)


state 12

    (105) type_specifier -> FLOAT .

    MULTIPLY        reduce using rule 105 (type_specifier -> FLOAT .)
    IDENTIFIER      reduce using rule 105 (type_specifier -> FLOAT .)
    L_PAREN         reduce using rule 105 (type_specifier -> FLOAT .)
    R_PAREN         reduce using rule 105 (type_specifier -> FLOAT .)


state 13

    (106) type_specifier -> DOUBLE .

    MULTIPLY        reduce using rule 106 (type_specifier -> DOUBLE .)
    IDENTIFIER      reduce using rule 106 (type_specifier -> DOUBLE .)
    L_PAREN         reduce using rule 106 (type_specifier -> DOUBLE .)
    R_PAREN         reduce using rule 106 (type_specifier -> DOUBLE .)


state 14

    (107) type_specifier -> STRUCT . IDENTIFIER
    (109) struct_specifier -> STRUCT . IDENTIFIER add_sym_struct struct_declaration_list pop_sym R_BRACES

    IDENTIFIER      shift and go to state 24


state 15

    (108) type_specifier -> BOOL .

    MULTIPLY        reduce using rule 108 (type_specifier -> BOOL .)
    IDENTIFIER      reduce using rule 108 (type_specifier -> BOOL .)
    L_PAREN         reduce using rule 108 (type_specifier -> BOOL .)
    R_PAREN         reduce using rule 108 (type_specifier -> BOOL .)


state 16

    (3) translation_unit -> translation_unit external_declaration .

    VOID            reduce using rule 3 (translation_unit -> translation_unit external_declaration .)
    CHAR            reduce using rule 3 (translation_unit -> translation_unit external_declaration .)
    INT             reduce using rule 3 (translation_unit -> translation_unit external_declaration .)
    LONG            reduce using rule 3 (translation_unit -> translation_unit external_declaration .)
    FLOAT           reduce using rule 3 (translation_unit -> translation_unit external_declaration .)
    DOUBLE          reduce using rule 3 (translation_unit -> translation_unit external_declaration .)
    STRUCT          reduce using rule 3 (translation_unit -> translation_unit external_declaration .)
    BOOL            reduce using rule 3 (translation_unit -> translation_unit external_declaration .)
    $end            reduce using rule 3 (translation_unit -> translation_unit external_declaration .)


state 17

    (6) function_definition -> type_specifier declarator . func_scope parameter_type_list func_rparen_1 function_body pop_sym
    (7) function_definition -> type_specifier declarator . func_scope func_rparen_2 function_body pop_sym
    (8) function_definition -> type_specifier declarator . func_scope parameter_type_list R_PAREN SEMI_COLON pop_sym
    (9) function_definition -> type_specifier declarator . func_scope R_PAREN SEMI_COLON pop_sym
    (99) init_declarator -> declarator .
    (100) init_declarator -> declarator . ASSIGNMENT initializer
    (10) func_scope -> . L_PAREN

    SEMI_COLON      reduce using rule 99 (init_declarator -> declarator .)
    COMMA           reduce using rule 99 (init_declarator -> declarator .)
    ASSIGNMENT      shift and go to state 26
    L_PAREN         shift and go to state 27

    func_scope                     shift and go to state 25

state 18

    (96) declaration -> type_specifier init_declarator_list . SEMI_COLON
    (98) init_declarator_list -> init_declarator_list . COMMA init_declarator

    SEMI_COLON      shift and go to state 28
    COMMA           shift and go to state 29


state 19

    (116) declarator -> pointer . direct_declarator
    (122) pointer -> pointer . MULTIPLY
    (118) direct_declarator -> . IDENTIFIER
    (119) direct_declarator -> . L_PAREN declarator R_PAREN
    (120) direct_declarator -> . direct_declarator L_SQBR INT_CONSTANT R_SQBR

    MULTIPLY        shift and go to state 31
    IDENTIFIER      shift and go to state 32
    L_PAREN         shift and go to state 33

    direct_declarator              shift and go to state 30

state 20

    (117) declarator -> no_pointer . direct_declarator
    (118) direct_declarator -> . IDENTIFIER
    (119) direct_declarator -> . L_PAREN declarator R_PAREN
    (120) direct_declarator -> . direct_declarator L_SQBR INT_CONSTANT R_SQBR

    IDENTIFIER      shift and go to state 32
    L_PAREN         shift and go to state 33

    direct_declarator              shift and go to state 34

state 21

    (97) init_declarator_list -> init_declarator .

    SEMI_COLON      reduce using rule 97 (init_declarator_list -> init_declarator .)
    COMMA           reduce using rule 97 (init_declarator_list -> init_declarator .)


state 22

    (121) pointer -> MULTIPLY .

    MULTIPLY        reduce using rule 121 (pointer -> MULTIPLY .)
    IDENTIFIER      reduce using rule 121 (pointer -> MULTIPLY .)
    L_PAREN         reduce using rule 121 (pointer -> MULTIPLY .)
    R_PAREN         reduce using rule 121 (pointer -> MULTIPLY .)


state 23

    (95) declaration -> struct_specifier SEMI_COLON .

    VOID            reduce using rule 95 (declaration -> struct_specifier SEMI_COLON .)
    CHAR            reduce using rule 95 (declaration -> struct_specifier SEMI_COLON .)
    INT             reduce using rule 95 (declaration -> struct_specifier SEMI_COLON .)
    LONG            reduce using rule 95 (declaration -> struct_specifier SEMI_COLON .)
    FLOAT           reduce using rule 95 (declaration -> struct_specifier SEMI_COLON .)
    DOUBLE          reduce using rule 95 (declaration -> struct_specifier SEMI_COLON .)
    STRUCT          reduce using rule 95 (declaration -> struct_specifier SEMI_COLON .)
    BOOL            reduce using rule 95 (declaration -> struct_specifier SEMI_COLON .)
    $end            reduce using rule 95 (declaration -> struct_specifier SEMI_COLON .)
    R_BRACES        reduce using rule 95 (declaration -> struct_specifier SEMI_COLON .)
    L_BRACES        reduce using rule 95 (declaration -> struct_specifier SEMI_COLON .)
    SEMI_COLON      reduce using rule 95 (declaration -> struct_specifier SEMI_COLON .)
    IF              reduce using rule 95 (declaration -> struct_specifier SEMI_COLON .)
    SWITCH          reduce using rule 95 (declaration -> struct_specifier SEMI_COLON .)
    WHILE           reduce using rule 95 (declaration -> struct_specifier SEMI_COLON .)
    DO              reduce using rule 95 (declaration -> struct_specifier SEMI_COLON .)
    FOR             reduce using rule 95 (declaration -> struct_specifier SEMI_COLON .)
    CONTINUE        reduce using rule 95 (declaration -> struct_specifier SEMI_COLON .)
    BREAK           reduce using rule 95 (declaration -> struct_specifier SEMI_COLON .)
    RETURN          reduce using rule 95 (declaration -> struct_specifier SEMI_COLON .)
    INCREMENT       reduce using rule 95 (declaration -> struct_specifier SEMI_COLON .)
    DECREMENT       reduce using rule 95 (declaration -> struct_specifier SEMI_COLON .)
    SIZEOF          reduce using rule 95 (declaration -> struct_specifier SEMI_COLON .)
    BITWISE_AND     reduce using rule 95 (declaration -> struct_specifier SEMI_COLON .)
    MULTIPLY        reduce using rule 95 (declaration -> struct_specifier SEMI_COLON .)
    ADD             reduce using rule 95 (declaration -> struct_specifier SEMI_COLON .)
    SUBSTRACT       reduce using rule 95 (declaration -> struct_specifier SEMI_COLON .)
    BITWISE_ONE_COMPLEMENT reduce using rule 95 (declaration -> struct_specifier SEMI_COLON .)
    LOGICAL_NOT     reduce using rule 95 (declaration -> struct_specifier SEMI_COLON .)
    IDENTIFIER      reduce using rule 95 (declaration -> struct_specifier SEMI_COLON .)
    INT_CONSTANT    reduce using rule 95 (declaration -> struct_specifier SEMI_COLON .)
    HEX_CONSTANT    reduce using rule 95 (declaration -> struct_specifier SEMI_COLON .)
    OCTAL_CONSTANT  reduce using rule 95 (declaration -> struct_specifier SEMI_COLON .)
    EXPONENT_CONSTANT reduce using rule 95 (declaration -> struct_specifier SEMI_COLON .)
    REAL_CONSTANT   reduce using rule 95 (declaration -> struct_specifier SEMI_COLON .)
    CHAR_CONSTANT   reduce using rule 95 (declaration -> struct_specifier SEMI_COLON .)
    STR_CONSTANT    reduce using rule 95 (declaration -> struct_specifier SEMI_COLON .)
    L_PAREN         reduce using rule 95 (declaration -> struct_specifier SEMI_COLON .)
    TRUE            reduce using rule 95 (declaration -> struct_specifier SEMI_COLON .)
    FALSE           reduce using rule 95 (declaration -> struct_specifier SEMI_COLON .)
    NULL            reduce using rule 95 (declaration -> struct_specifier SEMI_COLON .)


state 24

    (107) type_specifier -> STRUCT IDENTIFIER .
    (109) struct_specifier -> STRUCT IDENTIFIER . add_sym_struct struct_declaration_list pop_sym R_BRACES
    (110) add_sym_struct -> . L_BRACES

    MULTIPLY        reduce using rule 107 (type_specifier -> STRUCT IDENTIFIER .)
    IDENTIFIER      reduce using rule 107 (type_specifier -> STRUCT IDENTIFIER .)
    L_PAREN         reduce using rule 107 (type_specifier -> STRUCT IDENTIFIER .)
    L_BRACES        shift and go to state 36

    add_sym_struct                 shift and go to state 35

state 25

    (6) function_definition -> type_specifier declarator func_scope . parameter_type_list func_rparen_1 function_body pop_sym
    (7) function_definition -> type_specifier declarator func_scope . func_rparen_2 function_body pop_sym
    (8) function_definition -> type_specifier declarator func_scope . parameter_type_list R_PAREN SEMI_COLON pop_sym
    (9) function_definition -> type_specifier declarator func_scope . R_PAREN SEMI_COLON pop_sym
    (124) parameter_type_list -> . parameter_declaration
    (125) parameter_type_list -> . parameter_type_list COMMA parameter_declaration
    (12) func_rparen_2 -> . R_PAREN
    (126) parameter_declaration -> . type_specifier declarator
    (101) type_specifier -> . VOID
    (102) type_specifier -> . CHAR
    (103) type_specifier -> . INT
    (104) type_specifier -> . LONG
    (105) type_specifier -> . FLOAT
    (106) type_specifier -> . DOUBLE
    (107) type_specifier -> . STRUCT IDENTIFIER
    (108) type_specifier -> . BOOL

    R_PAREN         shift and go to state 40
    VOID            shift and go to state 8
    CHAR            shift and go to state 9
    INT             shift and go to state 10
    LONG            shift and go to state 11
    FLOAT           shift and go to state 12
    DOUBLE          shift and go to state 13
    STRUCT          shift and go to state 42
    BOOL            shift and go to state 15
